--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.2.10",
+    "firebase": "^10.10.0",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
     "react": "^18",
