--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_API_URL="https://light-basic-theme-discovery.opendatasoft.com/api/explore/v2.1/catalog/datasets/airbnb-listingspublic/"
-NEXT_PUBLIC_API_KEY ="AIzaSyD_5-gpfD5aHC9_CRxv7UuuMpx_It53wPA"
-NEXT_PUBLIC_AUTH_DOMAIN ="nextjs-booking-f1495.firebaseapp.com"
-NEXT_PUBLIC_PROJECT_ID ="nextjs-booking-f1495"
-NEXT_PUBLIC_STORAGE_BUCKET ="nextjs-booking-f1495.appspot.com"
-NEXT_PUBLIC_MESSAGING_SENDER_ID ="558241906081"
-NEXT_PUBLIC_APP_ID = "1:558241906081:web:8540059f522b39b9d59fe0"
+NEXT_PUBLIC_API_KEY="AIzaSyD_5-gpfD5aHC9_CRxv7UuuMpx_It53wPA"
+NEXT_PUBLIC_AUTH_DOMAIN="nextjs-booking-f1495.firebaseapp.com"
+NEXT_PUBLIC_PROJECT_ID="nextjs-booking-f1495"
+NEXT_PUBLIC_STORAGE_BUCKET="nextjs-booking-f1495.appspot.com"
+NEXT_PUBLIC_MESSAGING_SENDER_ID="558241906081"
+NEXT_PUBLIC_APP_ID="1:558241906081:web:8540059f522b39b9d59fe0"
