--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL="https://light-basic-theme-discovery.opendatasoft.com/api/explore/v2.1/catalog/datasets/airbnb-listingspublic/"
+NEXT_PUBLIC_API_URL="https://public.opendatasoft.com/api/explore/v2.1/catalog/datasets/air-bnb-listings/"
 NEXT_PUBLIC_API_KEY="AIzaSyD_5-gpfD5aHC9_CRxv7UuuMpx_It53wPA"
 NEXT_PUBLIC_AUTH_DOMAIN="nextjs-booking-f1495.firebaseapp.com"
 NEXT_PUBLIC_PROJECT_ID="nextjs-booking-f1495"
